--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 class="main__title">Examples of my work :</h2>
         <ul class="main__list">
           <li class="main__item">
-            <a href="" class="main__link"></a>
+            <a href="pages/Animation_example/index.html" class="main__link"></a>
           </li>
           <li class="main__item">
             <a href="" class="main__link"></a>
