--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li class="main__item reset ">
-            <a href="pages/домашняя работа со списком дел/index.html" class="main__link link__reset ">
+            <a href="pages/News-and-exchange-rates/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/форма.webp" alt="">
               <p class="main__dscr">Простое приложение на JQuery</p>
             </a>
