--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
           </li>
           <li class="main__item reset ">
-            <a href="pages/домашняя работа с курсом валют/index.html" class="main__link link__reset ">
+            <a href="pages/pages/to-do-list-app/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/новости.webp" alt="">
               <p class="main__dscr">FLOAT left/right базовый JQuery, моя самая первая вёрстка</p>
             </a>
