--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             </a>
           </li>
           <li class="main__item reset ">
+            <a href="pages/Blanchard/index.html" class="main__link link__reset ">
+              <img class="main__img" src="img/mail_html.webp" alt="">
+              <p class="main__dscr">Адаптивное письмо</p>
+            </a>
+          </li>
+          <li class="main__item reset ">
             <a href="pages/Lionic/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/лионик.webp" alt="">
               <p class="main__dscr">Макет Лионик адаптивный + базовый JS</p>
