--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
    <div class="header__container container">
     <h1 class="header__title reset">Welcome to repository!</h1>
-    <p class="header__link">Shifozzy.github.io</p>
+    <p class="header__link">Sergei Vozbrannyi</p>
    </div>
   </header>
   <main>
