--- a/index.html
+++ b/index.html
@@ -21,21 +21,15 @@
         <h2 class="main__title reset">Examples of my work :</h2>
         <ul class="main__list reset">
           <li class="main__item reset">
-            <a href="pages/Animation_example/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/Снимок экрана 2023-03-19 111759.jpg" alt="">
-              <p class="main__dscr">Работа с JS анимациями</p>
-            </a>
-          </li>
-          <li class="main__item reset">
-            <a href="pages/Layout/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/лендинг.webp" alt="">
-              <p class="main__dscr">Лендинг lagoona не адаптивный макет</p>
+            <a href="pages/Evclid/index.html" class="main__link link__reset">
+              <img class="main__img" src="img/евклид.webp" alt="">
+              <p class="main__dscr">Лендинг компании Evclid, adaptive, js</p>
             </a>
           </li>
           <li class="main__item reset">
             <a href="pages/Blanchard/index.html" class="main__link link__reset">
               <img class="main__img" src="img/mail_html.webp" alt="">
-              <p class="main__dscr">Адаптивное письмо</p>
+              <p class="main__dscr">Mail html, adaptive</p>
             </a>
           </li>
           <li class="main__item reset">
@@ -45,15 +39,21 @@
             </a>
           </li>
           <li class="main__item reset">
-            <a href="pages/Evclid/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/евклид.webp" alt="">
-              <p class="main__dscr">Адаптивный лендинг Evclid</p>
-            </a>
-          </li>
-          <li class="main__item reset">
             <a href="pages/Bootstrap/index.html" class="main__link link__reset">
               <img class="main__img" src="img/бутстрап.webp" alt="">
               <p class="main__dscr">Адаптивный макет SkillBox, работа с Bootstrap</p>
+            </a>
+          </li>
+          <li class="main__item reset">
+            <a href="pages/Animation_example/index.html" class="main__link link__reset">
+              <img class="main__img" src="img/Снимок экрана 2023-03-19 111759.jpg" alt="">
+              <p class="main__dscr">Работа с JS анимациями, без адаптива</p>
+            </a>
+          </li>
+          <li class="main__item reset">
+            <a href="pages/Layout/index.html" class="main__link link__reset">
+              <img class="main__img" src="img/лендинг.webp" alt="">
+              <p class="main__dscr">Лендинг lagoona, без адаптива</p>
             </a>
           </li>
           <li class="main__item reset">
@@ -65,7 +65,7 @@
           <li class="main__item reset">
               <a href="pages/News-and-exchange-rates/index.html" class="main__link link__reset">
               <img class="main__img" src="img/новости.webp" alt="">
-              <p class="main__dscr">FLOAT left/right базовый JQuery, моя самая первая вёрстка</p>
+              <p class="main__dscr">FLOAT left/right базовый JQuery,без адаптива, моя самая первая вёрстка</p>
             </a>
           </li>
         </ul>
