--- a/index.html
+++ b/index.html
@@ -5,67 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitShifOzzy.io</title>
-  <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <header class="header">
    <div class="header__container container">
-    <h1 class="header__title reset">Welcome to repository!</h1>
+    <h1 class="header__title">Welcome to repository!</h1>
     <p class="header__link">Sergei Vozbrannyi</p>
    </div>
   </header>
   <main>
     <section class="main__content">
        <div class="container">
-        <h2 class="main__title reset">Examples of my work :</h2>
-        <ul class="main__list reset">
-          <li class="main__item reset">
-            <a href="pages/Evclid/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/евклид.webp" alt="">
-              <p class="main__dscr">Лендинг компании Evclid, adaptive, js</p>
+        <h2 class="main__title">Examples of my work :</h2>
+        <ul class="main__list">
+          <li class="main__item">
+            <a href="pages/Animation_example/index.html" class="main__link link__reset ">
+              <img class="main__img" src="img/Снимок экрана 2023-03-19 111759.jpg" alt="">
+              <p class="main__dscr">Работа с JS анимациями</p>
             </a>
           </li>
-          <li class="main__item reset">
-            <a href="pages/Blanchard/index.html" class="main__link link__reset">
+          <li class="main__item">
+            <a href="pages/Layout/index.html" class="main__link link__reset ">
+              <img class="main__img" src="img/лендинг.webp" alt="">
+              <p class="main__dscr">Лендинг lagoona не адаптивный макет</p>
+            </a>
+          </li>
+          <li class="main__item">
+            <a href="pages/Blanchard/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/mail_html.webp" alt="">
-              <p class="main__dscr">Mail html, adaptive</p>
+              <p class="main__dscr">Адаптивное письмо</p>
             </a>
           </li>
-          <li class="main__item reset">
-            <a href="pages/Lionic/index.html" class="main__link link__reset">
+          <li class="main__item">
+            <a href="pages/Lionic/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/лионик.webp" alt="">
               <p class="main__dscr">Макет Лионик адаптивный + базовый JS</p>
             </a>
           </li>
-          <li class="main__item reset">
-            <a href="pages/Bootstrap/index.html" class="main__link link__reset">
+          <li class="main__item">
+            <a href="pages/Evclid/index.html" class="main__link link__reset ">
+              <img class="main__img" src="img/евклид.webp" alt="">
+              <p class="main__dscr">Адаптивный лендинг Evclid</p>
+            </a>
+          </li>
+          <li class="main__item">
+            <a href="pages/Bootstrap/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/бутстрап.webp" alt="">
               <p class="main__dscr">Адаптивный макет SkillBox, работа с Bootstrap</p>
             </a>
           </li>
-          <li class="main__item reset">
-            <a href="pages/Animation_example/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/Снимок экрана 2023-03-19 111759.jpg" alt="">
-              <p class="main__dscr">Работа с JS анимациями, без адаптива</p>
-            </a>
-          </li>
-          <li class="main__item reset">
-            <a href="pages/Layout/index.html" class="main__link link__reset">
-              <img class="main__img" src="img/лендинг.webp" alt="">
-              <p class="main__dscr">Лендинг lagoona, без адаптива</p>
-            </a>
-          </li>
-          <li class="main__item reset">
-              <a href="pages/to-do-list-app/index.html" class="main__link link__reset">
+          <li class="main__item">
+            <a href="pages/to-do-list-app/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/форма.webp" alt="">
               <p class="main__dscr">Простое приложение на JQuery</p>
             </a>
           </li>
-          <li class="main__item reset">
-              <a href="pages/News-and-exchange-rates/index.html" class="main__link link__reset">
+          <li class="main__item">
+            <a href="pages/News-and-exchange -ates/index.html" class="main__link link__reset ">
               <img class="main__img" src="img/новости.webp" alt="">
-              <p class="main__dscr">FLOAT left/right базовый JQuery,без адаптива, моя самая первая вёрстка</p>
+              <p class="main__dscr">FLOAT left/right базовый JQuery, моя самая первая вёрстка</p>
             </a>
           </li>
         </ul>
